--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "firebase": "^10.12.2",
     "google-auth-library": "^9.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
