--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "google-auth-library": "^9.9.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "linkify-it": "^5.0.0",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
